--- a/player-clip/package.json
+++ b/player-clip/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://PlayerClip.github.io./PlayerClip/",
+  "homepage" : "https://PlayerClip.github.io./PlayerClip/player-clip",
   "name": "player-clip",
   "private": true,
   "version": "0.0.0",
